web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-let-let/output.txt
[SyntaxError]: Identifier has already been declared. (1,10)
1|let foo, foo;
 |        ^
